--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-out/
-
 .idea
 *.iml
+
+# JAR stuff
+*META-INF
+
+# Personnal stuffs
+out/
+others/
+
